--- a/README
+++ b/README
@@ -4,10 +4,15 @@ Niwaka-BOT
   Twitterに自動投稿を行うことが出来るBOT。
 
 [必要なもの]
-  Javaが入っていればたぶん動きます。
+  Java本体と、Twitter4Jの対応したバージョンのライブラリが必要です。
+  開発にはTwitter4J 2.2.1を使っていますが、他のバージョンでも動くと思います。
+  Twitterへの投稿は、必要な情報が書かれているkey.txtが存在しないと出来ません。
+  ツイート一覧からのツイートを行うには、tweet.txtが必要です。
+  
 
 [導入]
-  compile.shとniwaka.sh、niwaka.javaを同じディレクトリに置きます。
+  CONSUMER KEY, CONSUMER SECRET KEY, ACCESS TOKEN, ACCESS TOKEN SECRETの4つを、key.txtに書き込みます。
+  compile.shとniwaka.sh、niwaka.javaをkey.txtのあるディレクトリに置きます。
   次に、compile.shを実行します。
 
 [使い方]
